# cutie-pi

./: .gitignore  CHANGELOG.md  Makefile  README.md  __version__.py  config.py  install.sh  lists.txt  main.py  pihole_dashboard.py  pyproject.toml  requirements-dev.txt  requirements.txt  uninstall.sh  vulture_whitelist.py
api/: __init__.py  pihole.py
screens/: __init__.py  base.py  blocked.py  clients.py  graph.py  settings.py  stats.py  system.py
ui/: __init__.py  colors.py  components.py  fonts.py  themes.py
utils/: __init__.py  logger.py  system_info.py
